<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textOut"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/surname" />

        <EditText
            android:id="@+id/surname"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/button_name" />
    </LinearLayout>


</LinearLayout>